<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:text="@string/app55_txtView"
        android:id="@+id/txtInclude_app55"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/app55_btn"
        android:id="@+id/btnInclude_app55"
        android:layout_gravity="center_horizontal"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app55_chx"
        android:id="@+id/chxInclude_app55"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>