<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app60_tip_and_saving_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/layout1"
    tools:context="com.example.eladron.androidappdevforbeginners.App60_TipAndSavingCalculator">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="This is Tip Calculator"
            android:textSize="20sp"
            android:padding="15dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg1"
            android:textColor="@color/fg1"
            android:id="@+id/textView4"
            android:elevation="@dimen/elevation"
            android:layout_marginBottom="1dp"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:useDefaultMargins="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:layout_columnSpan="2"
                    android:id="@+id/edtMoneyAmount_app60"
                    android:digits="0123456789"
                    android:background="@color/bg1"
                    android:textColor="@color/fg1"
                    android:maxLength="6"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_columnSpan="2"
                android:id="@+id/txtBillAmount_app60"
                android:layout_gravity="fill_horizontal"
                android:hint="@string/app60_enter_amount"
                android:background="@color/bg1"
                android:textColor="@color/fg1"
                android:padding="@dimen/txtView_padding"
                android:elevation="@dimen/elevation"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/fg1" />

            <TextView
                android:text="@string/app60_tip_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_columnSpan="1"
                android:layout_gravity="right|center_vertical"
                android:background="@color/bg1"
                android:textColor="@color/fg1"
                android:id="@+id/txtTipPercent_app60"/>

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="@dimen/seekbar_height"
                android:id="@+id/seekBarPercent_app60"
                android:layout_column="1"
                android:layout_row="1"
                android:max="50"
                android:progress="25"
                android:layout_gravity="fill_horizontal"
                android:progressTint="@color/fg1"
                android:thumbTint="@color/fg1"/>

            <TextView
                android:text="@string/app60_tip_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tip_app60"
                android:layout_gravity="right|center_horizontal"
                android:background="@color/bg1"
                android:textColor="@color/fg1"
                android:layout_column="0"
                android:layout_row="2"
                android:layout_columnSpan="1"/>

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtTip_app60"
                android:layout_gravity="fill_horizontal"
                android:background="@color/bg1"
                android:textColor="@color/fg1"
                android:padding="@dimen/txtView_padding"
                android:gravity="center"
                android:elevation="@dimen/elevation"
                android:layout_column="1"
                android:layout_row="2"/>

            <TextView
                android:text="@string/app60_total_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtLabelTotal_app60"
                android:layout_gravity="right|center_vertical"
                android:background="@color/bg1"
                android:textColor="@color/fg1"
                android:layout_column="0"
                android:layout_row="3"/>

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtTotalBillAmount_app60"
                android:layout_gravity="fill_horizontal"
                android:background="@color/bg1"
                android:textColor="@color/fg1"
                android:gravity="center"
                android:elevation="@dimen/elevation"
                android:layout_column="1"
                android:layout_row="3"/>

            <TextView
                android:text="This is Saving Calculator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:padding="15dp"
                android:textSize="20sp"
                android:background="@color/bg1"
                android:textColor="@color/fg1"
                android:gravity="center_horizontal"
                android:elevation="@dimen/elevation"
                android:layout_column="0"
                android:layout_row="4"
                android:layout_columnSpan="2" />

            <EditText
                android:hint="`"
                android:layout_gravity="fill_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edtSalary_app60"
                android:background="@color/bg1"
                android:layout_column="0"
                android:layout_row="5"
                android:layout_columnSpan="2"
                android:padding="15dp"
                android:elevation="@dimen/elevation"
                android:textColorHint="@color/fg1" />

            <TextView
                android:text="@string/app60_saving_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtSavePercent_app60"
                android:layout_gravity="right|center_vertical"
                android:background="@color/bg1"
                android:textColor="@color/fg1"
                android:gravity="center"
                android:elevation="@dimen/elevation"
                android:layout_column="0"
                android:layout_row="6"
                android:layout_columnSpan="1"/>

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="@dimen/seekbar_height"
                android:id="@+id/seekSavePercent_app60"
                android:layout_column="1"
                android:layout_row="6"
                android:max="100"
                android:progress="50"
                android:layout_gravity="fill_horizontal"
                android:layout_columnSpan="1"
                android:progressTint="@color/fg1"
                android:thumbTint="@color/fg1" />

            <TextView
                android:text="@string/app60_total_money_saved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@color/bg1"
                android:textColor="@color/fg1"
                android:layout_column="0"
                android:layout_row="7"
                android:layout_columnSpan="1"/>

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtMoveySaved_app60"
                android:layout_gravity="fill_horizontal"
                android:background="@color/bg1"
                android:textColor="@color/fg1"
                android:padding="@dimen/txtView_padding"
                android:gravity="center"
                android:elevation="@dimen/elevation"
                android:layout_column="1"
                android:layout_row="7"
                android:layout_columnSpan="1"/>

        </GridLayout>

    </LinearLayout>

</RelativeLayout>
